--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,3 +1,5 @@
+
+
 $nav-background: rgb(31, 29, 29);
 
 // Theming
@@ -7,4 +9,8 @@ $light-background: white;
 $light: rgb(247, 247, 246);
 $light2: rgb(235, 235, 235);
 $light3: rgb(200, 200, 200);
+
+//
+$padding: 17px;
+
 
